@@ -1,6 +1,8 @@
 package bio.terra.workspace.app.controller;
 
 import bio.terra.workspace.common.utils.ControllerValidationUtils;
+import bio.terra.workspace.db.WorkspaceActivityLogDao;
+import bio.terra.workspace.db.model.DbWorkspaceActivityLog;
 import bio.terra.workspace.generated.controller.WorkspaceApi;
 import bio.terra.workspace.generated.model.ApiAzureContext;
 import bio.terra.workspace.generated.model.ApiCloneWorkspaceRequest;
@@ -42,14 +44,15 @@ import bio.terra.workspace.service.workspace.exceptions.CloudContextRequiredExce
 import bio.terra.workspace.service.workspace.model.AzureCloudContext;
 import bio.terra.workspace.service.workspace.model.CloudContextHolder;
 import bio.terra.workspace.service.workspace.model.GcpCloudContext;
+import bio.terra.workspace.service.workspace.model.OperationType;
 import bio.terra.workspace.service.workspace.model.Workspace;
+import bio.terra.workspace.service.workspace.model.WorkspaceAndHighestRole;
 import bio.terra.workspace.service.workspace.model.WorkspaceStage;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 import javax.validation.Valid;
 import org.slf4j.Logger;
@@ -70,6 +73,7 @@ public class WorkspaceApiController extends ControllerBase implements WorkspaceA
   private final AzureCloudContextService azureCloudContextService;
   private final GcpCloudContextService gcpCloudContextService;
   private final PetSaService petSaService;
+  private final WorkspaceActivityLogDao workspaceActivityLogDao;
 
   @Autowired
   public WorkspaceApiController(
@@ -80,7 +84,8 @@ public class WorkspaceApiController extends ControllerBase implements WorkspaceA
       HttpServletRequest request,
       GcpCloudContextService gcpCloudContextService,
       PetSaService petSaService,
-      AzureCloudContextService azureCloudContextService) {
+      AzureCloudContextService azureCloudContextService,
+      WorkspaceActivityLogDao workspaceActivityLogDao) {
     super(authenticatedUserRequestFactory, request, samService);
     this.workspaceService = workspaceService;
     this.jobService = jobService;
@@ -88,6 +93,7 @@ public class WorkspaceApiController extends ControllerBase implements WorkspaceA
     this.azureCloudContextService = azureCloudContextService;
     this.gcpCloudContextService = gcpCloudContextService;
     this.petSaService = petSaService;
+    this.workspaceActivityLogDao = workspaceActivityLogDao;
   }
 
   @Override
@@ -143,18 +149,23 @@ public class WorkspaceApiController extends ControllerBase implements WorkspaceA
     // Unlike other operations, there's no Sam permission required to list workspaces. As long as
     // a user is enabled, they can call this endpoint, though they may not have any workspaces they
     // can read.
-
-    List<Workspace> workspaces = workspaceService.listWorkspaces(userRequest, offset, limit);
+    List<WorkspaceAndHighestRole> workspacesAndHighestRoles =
+        workspaceService.listWorkspacesAndHighestRoles(userRequest, offset, limit);
     var response =
         new ApiWorkspaceDescriptionList()
             .workspaces(
-                workspaces.stream()
-                    .map(this::buildWorkspaceDescription)
-                    .collect(Collectors.toList()));
+                workspacesAndHighestRoles.stream()
+                    .map(
+                        workspaceAndHighestRole ->
+                            buildWorkspaceDescription(
+                                workspaceAndHighestRole.workspace(),
+                                workspaceAndHighestRole.highestRole()))
+                    .toList());
     return new ResponseEntity<>(response, HttpStatus.OK);
   }
 
-  private ApiWorkspaceDescription buildWorkspaceDescription(Workspace workspace) {
+  private ApiWorkspaceDescription buildWorkspaceDescription(
+      Workspace workspace, WsmIamRole highestRole) {
     ApiGcpContext gcpContext =
         gcpCloudContextService
             .getGcpCloudContext(workspace.getWorkspaceId())
@@ -179,6 +190,7 @@ public class WorkspaceApiController extends ControllerBase implements WorkspaceA
         .userFacingId(workspace.getUserFacingId())
         .displayName(workspace.getDisplayName().orElse(null))
         .description(workspace.getDescription().orElse(null))
+        .highestRole(highestRole.toApiModel())
         .properties(apiProperties)
         .spendProfile(workspace.getSpendProfileId().map(SpendProfileId::getId).orElse(null))
         .stage(workspace.getWorkspaceStage().toApiModel())
@@ -194,7 +206,8 @@ public class WorkspaceApiController extends ControllerBase implements WorkspaceA
     Workspace workspace =
         workspaceService.validateWorkspaceAndAction(
             userRequest, uuid, SamConstants.SamWorkspaceAction.READ);
-    ApiWorkspaceDescription desc = buildWorkspaceDescription(workspace);
+    WsmIamRole highestRole = workspaceService.getHighestRole(uuid, userRequest);
+    ApiWorkspaceDescription desc = buildWorkspaceDescription(workspace, highestRole);
     logger.info("Got workspace {} for {}", desc, userRequest.getEmail());
 
     return new ResponseEntity<>(desc, HttpStatus.OK);
@@ -225,7 +238,8 @@ public class WorkspaceApiController extends ControllerBase implements WorkspaceA
             body.getDescription(),
             propertyMap);
 
-    ApiWorkspaceDescription desc = buildWorkspaceDescription(workspace);
+    WsmIamRole highestRole = workspaceService.getHighestRole(workspaceUuid, userRequest);
+    ApiWorkspaceDescription desc = buildWorkspaceDescription(workspace, highestRole);
     logger.info("Updated workspace {} for {}", desc, userRequest.getEmail());
 
     return new ResponseEntity<>(desc, HttpStatus.OK);
@@ -251,7 +265,9 @@ public class WorkspaceApiController extends ControllerBase implements WorkspaceA
     // Authz check is inside workspaceService here as we would need the UUID to check Sam, but
     // we only have the UFID at this point.
     Workspace workspace = workspaceService.getWorkspaceByUserFacingId(userFacingId, userRequest);
-    ApiWorkspaceDescription desc = buildWorkspaceDescription(workspace);
+    WsmIamRole highestRole =
+        workspaceService.getHighestRole(workspace.getWorkspaceId(), userRequest);
+    ApiWorkspaceDescription desc = buildWorkspaceDescription(workspace, highestRole);
     logger.info("Got workspace {} for {}", desc, userRequest.getEmail());
 
     return new ResponseEntity<>(desc, HttpStatus.OK);
@@ -273,6 +289,8 @@ public class WorkspaceApiController extends ControllerBase implements WorkspaceA
             samService.grantWorkspaceRole(
                 uuid, getAuthenticatedInfo(), WsmIamRole.fromApiModel(role), body.getMemberEmail()),
         "grantWorkspaceRole");
+    workspaceActivityLogDao.writeActivity(
+        uuid, new DbWorkspaceActivityLog().operationType(OperationType.GRANT_WORKSPACE_ROLE));
     return new ResponseEntity<>(HttpStatus.NO_CONTENT);
   }
 
